--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
-    
+    <script src="p5.js"></script>
+    <script src="event.js"></script>
+    <script src="sketch.js"></script>
+    <script src="timetable.js"></script>
+    <script src="work.js"></script>
 </body>
 </html>
