--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <script src = "sketch.js"></script>
     <script src = "box.js"></script>
     <script src = "button.js"></script>
+    <script src = "numberChooser.js"></script>
+    <script src = "plant.jpg"></script>
+    <script src = "solver.js"></script>
+    <script src = "lamp.jpg"></script>
 </body>
 </html>
